--- a/our-work.html
+++ b/our-work.html
@@ -122,7 +122,7 @@
 
 						</h1>
 
-						<p class="max-w-2xl font-medium text-justify lg:text-lg  lg:px-4">
+						<p class="max-w-2xl font-medium text-justify lg:text-lg  p-2">
 							We began our journey with a focus on improving the lives of rural women. We aim to provide
 							women with income-generating skills through courses in sewing, embroidery, and beautician
 							skills. Over time, we partnered with various organisations, including the Women and Child
@@ -135,8 +135,8 @@
 
 
 					<div class="mb-12 lg:mb-0 sm:place-self-center w-full">
-						<img src="./public/image/gallery/livelihood.JPG" class="object-fill  h-104 w-full rounded-lg "
-							alt="logo">
+						<img src="./public/image/women-empowerment/gallery-img-8.JPG"
+							class="object-fill  h-104 w-full rounded-lg " alt="logo">
 					</div>
 
 				</div>
@@ -160,7 +160,7 @@
 							Education: Advocating for Child Rights
 						</h1>
 
-						<p class="max-w-2xl font-medium text-justify lg:text-lg  lg:px-4">
+						<p class="max-w-2xl font-medium text-justify lg:text-lg  p-2">
 							Sachcha Prayas Sanstha recognises the importance of child rights advocacy. We strive to
 							create a positive atmosphere for child rights discussions at the Gram Panchayat level. Our
 							organisation collaborates with various government and non-government entities, such as the
@@ -189,7 +189,7 @@
 							Health
 						</h1>
 
-						<p class="max-w-2xl font-medium text-justify lg:text-lg  lg:px-4">
+						<p class="max-w-2xl font-medium text-justify lg:text-lg  p-2">
 							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat eius aut dolorem quas
 							consectetur laborum maxime ex iusto. Possimus libero accusamus officiis sed animi mollitia,
 							hic officia nostrum veniam placeat.
@@ -218,8 +218,8 @@
 				<div class="grid lg:grid-cols-2 lg:gap-20 gap-8 flex items-center justify-center">
 
 					<div class="mb-12 lg:mb-0 sm:place-self-center w-full">
-						<img src="./public/image/gallery/legal-aid.jpg" class="object-fill  h-104 w-full rounded-lg "
-							alt="logo">
+						<img src="./public/image/legal-aid/gallery-img-11.JPG"
+							class="object-fill  h-104 w-full rounded-lg " alt="logo">
 					</div>
 
 					<div class="mt-12 lg:mt-0">
@@ -227,7 +227,7 @@
 							Legal Aid
 						</h1>
 
-						<p class="max-w-2xl font-medium text-justify lg:text-lg  lg:px-4">
+						<p class="max-w-2xl font-medium text-justify lg:text-lg  p-2">
 							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat eius aut dolorem quas
 							consectetur laborum maxime ex iusto. Possimus libero accusamus officiis sed animi mollitia,
 							hic officia nostrum veniam placeat.
@@ -254,7 +254,7 @@
 							Vocational Training
 						</h1>
 
-						<p class="max-w-2xl font-medium text-justify lg:text-lg  lg:px-4">
+						<p class="max-w-2xl font-medium text-justify lg:text-lg  p-2">
 							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat eius aut dolorem quas
 							consectetur laborum maxime ex iusto. Possimus libero accusamus officiis sed animi mollitia,
 							hic officia nostrum veniam placeat.
@@ -269,7 +269,7 @@
 
 					<div class="mb-12 lg:mb-0 sm:place-self-center w-full">
 						<img src="./public/image/gallery/gallery-img-14.JPG"
-							class=" object-fill  h-104 w-full rounded-lg " alt="logo">
+							class=" object-fill  h-104 w-full rounded-lg " alt="vocational training">
 					</div>
 				</div>
 			</div>
