--- a/index.html
+++ b/index.html
@@ -442,8 +442,8 @@
 	<!-- footer  -->
 	<div class="border-4 border-orange-400 border-back-color"></div>
 
-	<footer class="bg-white  text-white" aria-labelledby="footer-heading">
-		<div class="mx-auto max-w-7xl lg:px-6 px-4 pb-4 pt-12 text-black">
+	<footer class="bg-white p-4  text-white" aria-labelledby="footer-heading">
+		<div class="mx-auto max-w-7xl px-6 pb-4 sm:pt-24 lg:px-16 pt-2 lg:pt-12 text-black">
 			<div class="">
 				<div class="flex flex-col lg:flex-row justify-between lg:gap-20 gap-12">
 
@@ -452,7 +452,6 @@
 						<h3 class="text-lg font-semibold leading-6 text-black">Address</h3>
 						<p class="mt-2 text-baseleading-6 text-black font-family-class">Near to Police Chauki Bus Stand,
 							Gram Panchayat Harduli Bargi Nagar, district Jabalpur, Pin code – 482001
-
 
 						</p>
 
@@ -488,6 +487,7 @@
 						</svg>
 					</a>
 				</div>
+
 
 				<!-- copyright -->
 				<div>
