--- a/team.html
+++ b/team.html
@@ -634,7 +634,7 @@
 
 					<button class="btn p-4 rounded-t-lg " onclick="my_modal_10.showModal()">
 
-						<img class="aspect-[2/2] rounded-full p-12  " src="public/image/team/Amit dass parwaar .jpg"
+						<img class="aspect-[2/2] rounded-full p-12  " src="public/image/team/image 133.png"
 							alt="">
 
 						<h1 class="text-2xl text-center">
